# battlescribe-roster-parser

./: .dockerignore  .gitignore  Dockerfile  README.md  battlescribe-roster-parser.cabal  build.sh  create-tts-json  data.json  deploy.sh  run-local.sh  stack.yaml  test.ros  testcommits.sh
.github/ISSUE_TEMPLATE/: bug_report.md
frontend/: Dockerfile  build.sh  deploy.sh  elm.json  index.html  run-local.sh
frontend/html/: ads.txt  elm.js  index.html
frontend/nginx/: mysite.template
frontend/src/: Main.elm
models/: chaos.json  daemons.json  misc.json  orks.json  tau.json  thousandsons.json  tyranids.json
src/: CommandLine.hs  Databases.hs  Main.hs  ModelScript.hs  RosterProcessing.hs  Server.hs  TTSJson.hs  TTSUI.hs  Types.hs  XmlHelper.hs
src/main/: Main.hs
test/: Test.hs
test_rosters/: Aggressors.rosz  AssaultHellblasters.rosz  AutoBoltRifleIntercessors.rosz  BigMeks.rosz  Bloodletters.rosz  BoltRifleIntercessors.rosz  Broodlord.rosz  Genestealers.rosz  GreyKnights.rosz  HeavyHellblasters.rosz  Hellblasters.rosz  ImmortalsGaussBlaster.rosz  ImmortalsTeslaCarbine.rosz  LychguardHyperphase.rosz  LychguardWarscythe.rosz  Painboy.rosz  PlagueMarines.rosz  PlagueMarines9th.rosz  RavenwingBikeSquad.rosz  ScarabOccultTerminators.rosz  Skaven.rosz  StalkerBoltRifleIntercessors.rosz  StormRaven.rosz  TacticalSquad.rosz  TalonMaster.rosz  TestTalos.rosz  ThunderfireCannon.rosz  TriarchPraetorians.rosz  Wulfen.rosz  terminator.testros  testvalk.testros
test_rosters/backups/: tyranids 200229225343934.testros  tyranids_truth.json
tts/: controller.lua  object.lua  temp.lua  ui.xml
