name:                battlescribe-roster-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/battlescribe-roster-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable battlescribe-roster-parser
  hs-source-dirs:      src
  main-is:             Server.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hxt, safe, aeson, text, 
                       containers, lens, directory, lens-aeson, bytestring,
                       unordered-containers, filepath, neat-interpolation, 
                       cryptohash-md5, hexstring, servant-server, servant, 
                       http-api-data, wai, warp, wai-logger, zip-archive, 
                       servant-multipart, hedis, mtl, wai-cors, servant-auth, 
                       servant-auth-server, hashable, uuid, either, wai-extra,
                       uri-encode, ilist, MonadRandom, vector
  other-modules:       TTSJson, Types, RosterProcessing, XmlHelper, TTSUI
