name:                battlescribe-roster-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/battlescribe-roster-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library battlescribe-roster-parser-lib
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hxt, safe, aeson, text, 
                       containers, lens, directory, lens-aeson, bytestring,
                       unordered-containers, filepath, neat-interpolation, 
                       cryptohash-md5, hexstring, servant-server, servant, 
                       http-api-data, wai, warp, wai-logger, zip-archive, 
                       servant-multipart, hedis, mtl, wai-cors, servant-auth, 
                       servant-auth-server, hashable, uuid, either, wai-extra,
                       uri-encode, ilist, MonadRandom, vector
  exposed-modules:     Server, RosterProcessing, Types, TTSJson, XmlHelper, TTSUI

executable battlescribe-roster-parser
  hs-source-dirs:      src/main
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, battlescribe-roster-parser-lib

test-suite tests
    type:                exitcode-stdio-1.0
    main-is:             Test.hs
    hs-source-dirs:      test
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5, battlescribe-roster-parser-lib, hspec, zip-archive,
                         bytestring, aeson


